package at.jku.dke.etutor.grading.rest;


import at.jku.dke.etutor.grading.rest.dto.GradingDTO;
import at.jku.dke.etutor.grading.rest.repositories.GradingDTORepository;
import org.springframework.hateoas.EntityModel;
import org.springframework.http.HttpStatus;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.GetMapping;
import org.springframework.web.bind.annotation.PathVariable;
import org.springframework.web.bind.annotation.RequestMapping;
import org.springframework.web.bind.annotation.RestController;

import java.util.Optional;
import java.util.logging.Logger;

import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;

/**
 * Api for handling GradingDTO resources
 */

@RestController
@RequestMapping("/grading")
public class ETutorGradingController {
    private Logger logger;
    private GradingDTORepository gradingDTORepository;
    public ETutorGradingController(GradingDTORepository gradingDTORepository) {
        this.logger = Logger.getLogger("at.jku.dke.etutor.grading");
        this.gradingDTORepository = gradingDTORepository;
    }

    /**
     * Takes the submissionId (ideally) generated by the ETutorSubmissionController and fetches and returns
     * the corresponding Grading.
     * @param submissionId the identifier for the GradingDTO as path variable
     * @return ResponseEntity containing EntityModel<GradingDTO> and a self reference (link)
     *          - HttpStatus.NOT_FOUND if no Grading is available for the given id.
     *          - HttpStatus.OK if Grading is available
     */
    @GetMapping("/{submissionId}")
    public ResponseEntity<EntityModel<GradingDTO>> getGrading(@PathVariable String submissionId) {
        logger.info("Received request for Grading with Submission ID: " + submissionId);
        logger.info("Fetching Grading from database ");

        Optional<GradingDTO> optional = gradingDTORepository.findById(submissionId);
        if (optional.isPresent()) {
            logger.info("Finished fetching Grading from database ");
            GradingDTO grading = optional.get();
            return ResponseEntity.ok(EntityModel.of(grading,
                    linkTo(methodOn(ETutorGradingController.class).getGrading(submissionId.toString())).withRel("self")));
        } else  {
            logger.info("No Grading found for Submission ID: " + submissionId);
            return new ResponseEntity<>(EntityModel.of(new GradingDTO(),
                        linkTo(methodOn(ETutorGradingController.class).getGrading(submissionId.toString())).withRel("self")),
                        HttpStatus.NOT_FOUND);
        }
    }
}
