package at.jku.dke.etutor.grading.rest.dto;

import at.jku.dke.etutor.core.evaluation.DefaultGrading;
import at.jku.dke.etutor.core.evaluation.DefaultReport;
import at.jku.dke.etutor.core.evaluation.Grading;

import javax.persistence.Entity;
import javax.persistence.Id;
import javax.persistence.OneToOne;
import javax.persistence.Table;

/**
 * Wraps the Grading which is generated by the module but only offers the methods getPoints() and getMaxPoints()
 * according to at.jku.dke.etutor.core.evaluation.Grading into an object that can be transmitted via Http
 */
@Entity
@Table(name="grading")
public class GradingDTO {
    @Id
    private String submissionId;
    private double points;
    private double maxPoints;

    @OneToOne
    private ReportDTO report;

    public GradingDTO(){}

    public GradingDTO(String submissionId, double points, double maxPoints){
        this.points = points;
        this.maxPoints= maxPoints;
        this.submissionId=submissionId;
    }

    public GradingDTO(String submissionId, Grading grading){
        this.submissionId=submissionId;
        this.points = grading.getPoints();
        this.maxPoints = grading.getMaxPoints();
    }

    public ReportDTO getReport() {
        return report;
    }

    public void setReport(ReportDTO report) {
        this.report = report;
    }

    public String getSubmissionId() {
        return submissionId;
    }

    public void setSubmissionId(String submissionId) {
        this.submissionId = submissionId;
    }

    public double getPoints() {
        return points;
    }

    public void setPoints(double points) {
        this.points = points;
    }

    public double getMaxPoints() {
        return maxPoints;
    }

    public void setMaxPoints(double maxPoints) {
        this.maxPoints = maxPoints;
    }
}
