@startuml
interface at.jku.dke.etutor.grading.rest.repositories.SubmissionRepository {
}
class at.jku.dke.etutor.grading.rest.dto.SubmissionId {
- String submissionId
+ String getSubmissionId()
+ void setSubmissionId(String)
+ {static} SubmissionId createId(Submission)
+ String toString()
}
class at.jku.dke.etutor.grading.rest.ETutorGradingController {
- Logger logger
- GradingDTORepository gradingDTORepository
+ ResponseEntity<EntityModel<GradingDTO>> getGrading(String)
}
class at.jku.dke.etutor.grading.rest.dto.GradingDTO {
- String submissionId
- double points
- double maxPoints
- ReportDTO report
+ ReportDTO getReport()
+ void setReport(ReportDTO)
+ String getSubmissionId()
+ void setSubmissionId(String)
+ double getPoints()
+ void setPoints(double)
+ double getMaxPoints()
+ void setMaxPoints(double)
}
interface at.jku.dke.etutor.grading.rest.repositories.GradingDTORepository {
}
class at.jku.dke.etutor.grading.service.SubmissionDispatcher {
- Submission submission
- Logger logger
- SubmissionRepository submissionRepository
- GradingDTORepository gradingDTORepository
- ReportDTORepository reportDTORepository
+ void run()
- void processAnalysis(Evaluator,Grading,Analysis,Submission)
+ Submission getSubmission()
+ void setSubmission(Submission)
}
class at.jku.dke.etutor.grading.rest.dto.Submission {
- String submissionId
- String taskType
- int exerciseId
- int userId
- Map<String,String> passedAttributes
- Map<String,String> passedParameters
- int maxPoints
+ int getMaxPoints()
+ void setMaxPoints(int)
+ String getSubmissionId()
+ void setSubmissionId(String)
+ String getTaskType()
+ void setTaskType(String)
+ int getExerciseId()
+ void setExerciseId(int)
+ int getUserId()
+ void setUserId(int)
+ Map<String,String> getPassedAttributes()
+ void setPassedAttributes(Map)
+ Map<String,String> getPassedParameters()
+ void setPassedParameters(Map)
}
class at.jku.dke.etutor.grading.rest.ETutorSubmissionController {
- Logger logger
- SubmissionRepository submissionRepository
- GradingDTORepository gradingDTORepository
- ReportDTORepository reportDTORepository
+ ResponseEntity<EntityModel<SubmissionId>> dispatchSubmission(Submission)
}
class at.jku.dke.etutor.grading.ETutorGradingApplication {
+ {static} void main(String[])
+ Docket api()
}
class at.jku.dke.etutor.grading.rest.TestApp {
+ {static} void main(String[])
}
class at.jku.dke.etutor.grading.service.ModuleManager {
- {static} SQLEvaluator sqlEvaluator
+ {static} Evaluator getEvaluator(String)
}
interface at.jku.dke.etutor.grading.rest.repositories.ReportDTORepository {
}
class at.jku.dke.etutor.grading.rest.dto.ReportDTO {
- String submissionId
- String hint
- String error
- String description
+ String getSubmissionId()
+ void setSubmissionId(String)
+ String getHint()
+ void setHint(String)
+ String getError()
+ void setError(String)
+ String getDescription()
+ void setDescription(String)
}


org.springframework.data.jpa.repository.JpaRepository <|-- at.jku.dke.etutor.grading.rest.repositories.SubmissionRepository
org.springframework.data.jpa.repository.JpaRepository <|-- at.jku.dke.etutor.grading.rest.repositories.GradingDTORepository
at.jku.dke.etutor.grading.service.Runnable <|.. at.jku.dke.etutor.grading.service.SubmissionDispatcher
java.io.Serializable <|.. at.jku.dke.etutor.grading.rest.dto.Submission
org.springframework.data.jpa.repository.JpaRepository <|-- at.jku.dke.etutor.grading.rest.repositories.ReportDTORepository
@enduml